using ECDSA signatures now

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bls-signatures"]
 	path = bls-signatures
 	url = https://github.com/Chia-Network/bls-signatures.git
+[submodule "secp256k1"]
+	path = secp256k1
+	url = https://github.com/bitcoin-core/secp256k1.git
