--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,7 @@
 cmake_minimum_required(VERSION 3.11)
-project(mmx-node C CXX)
+project(mmx-node C CXX ASM)
 
 set(CMAKE_CXX_STANDARD 11)
-
-include(FetchContent)
-
-FetchContent_Declare(
-	secp256k1
-	GIT_REPOSITORY https://github.com/bitcoin-core/secp256k1.git
-	GIT_TAG        fecf436d5327717801da84beb3066f5a9b80ea8e
-)
 
 add_subdirectory(bls-signatures)
 
@@ -54,6 +46,45 @@ add_library(uint256_t STATIC
 	uint256_t/uint256_t.cpp
 )
 
+set(BLAKE3_PATH ${CMAKE_CURRENT_SOURCE_DIR}/chiapos/src/b3)
+set(FSE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/chiapos/lib/FiniteStateEntropy/lib)
+
+IF (WIN32)
+set(BLAKE3_SRC
+	${BLAKE3_PATH}/blake3.c
+	${BLAKE3_PATH}/blake3_portable.c
+	${BLAKE3_PATH}/blake3_dispatch.c
+	${BLAKE3_PATH}/blake3_avx2.c
+	${BLAKE3_PATH}/blake3_avx512.c
+	${BLAKE3_PATH}/blake3_sse41.c
+)
+ELSEIF(OSX_NATIVE_ARCHITECTURE STREQUAL "arm64")
+set(BLAKE3_SRC
+	${BLAKE3_PATH}/blake3.c
+	${BLAKE3_PATH}/blake3_portable.c
+	${BLAKE3_PATH}/blake3_dispatch.c
+)
+ELSE()
+set(BLAKE3_SRC
+	${BLAKE3_PATH}/blake3.c
+	${BLAKE3_PATH}/blake3_portable.c
+	${BLAKE3_PATH}/blake3_dispatch.c
+	${BLAKE3_PATH}/blake3_avx2_x86-64_unix.S
+	${BLAKE3_PATH}/blake3_avx512_x86-64_unix.S
+	${BLAKE3_PATH}/blake3_sse41_x86-64_unix.S
+)
+ENDIF()
+
+add_library(mmx_chiapos STATIC
+	src/chiapos/chiapos.cpp
+	chiapos/src/chacha8.c
+	${BLAKE3_SRC}
+	${FSE_PATH}/fse_compress.c
+	${FSE_PATH}/fse_decompress.c
+	${FSE_PATH}/entropy_common.c
+	${FSE_PATH}/hist.c
+)
+
 target_include_directories(mmx_iface
 	PUBLIC
 		include
@@ -65,8 +96,13 @@ target_include_directories(mmx_iface
 
 target_include_directories(uint256_t PUBLIC uint256_t)
 
+target_include_directories(mmx_chiapos
+	PUBLIC src/chiapos
+	PRIVATE chiapos/src chiapos/lib/include
+)
+
 target_link_libraries(mmx_iface uint256_t secp256k1 bls vnx_base)
-target_link_libraries(mmx_modules mmx_iface)
+target_link_libraries(mmx_modules mmx_chiapos mmx_iface)
 
 add_executable(mmx_timelord src/mmx_timelord.cpp)
 
