--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ add_library(mmx_iface SHARED
 	src/ProofOfTime.cpp
 	src/ProofOfSpace.cpp
 	src/secp256k1.cpp
+	src/contract/PubKey.cpp
 )
 
 add_library(mmx_modules SHARED
