--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "uint256_t"]
 	path = uint256_t
 	url = https://github.com/calccrypto/uint256_t.git
+[submodule "libbech32"]
+	path = libbech32
+	url = https://github.com/dcdpr/libbech32.git
