--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,11 +2,14 @@ cmake_minimum_required(VERSION 3.11)
 project(mmx-node C CXX ASM)
 
 set(CMAKE_CXX_STANDARD 11)
-
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC -fopenmp -Wall -Wno-unused-function")
 
-set(LIBBECH32_BUILD_GOOGLETEST OFF)
-set(LIBBECH32_BUILD_RAPIDCHECK OFF)
+set(ARITH "easy" CACHE STRING "BLS ARITH")
+set(BUILD_BLS_PYTHON_BINDINGS OFF CACHE BOOL "BUILD_BLS_PYTHON_BINDINGS")
+set(BUILD_BLS_TESTS OFF CACHE BOOL "BUILD_BLS_TESTS")
+set(BUILD_BLS_BENCHMARKS OFF CACHE BOOL "BUILD_BLS_BENCHMARKS")
+set(LIBBECH32_BUILD_GOOGLETEST OFF CACHE BOOL "LIBBECH32_BUILD_GOOGLETEST")
+set(LIBBECH32_BUILD_RAPIDCHECK OFF CACHE BOOL "LIBBECH32_BUILD_RAPIDCHECK")
 
 add_subdirectory(vnx-base)
 add_subdirectory(vnx-addons)
