--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,8 @@ add_subdirectory(basic-opencl)
 
 find_package(Threads REQUIRED)
 
+include(chiapos.cmake)
+
 target_compile_definitions(automy_basic_opencl
 	PUBLIC CL_TARGET_OPENCL_VERSION=120
 )
@@ -67,45 +69,6 @@ add_library(mmx_modules SHARED
 add_library(uint256_t STATIC
 	uint256_t/uint128_t.cpp
 	uint256_t/uint256_t.cpp
-)
-
-set(BLAKE3_PATH ${CMAKE_CURRENT_SOURCE_DIR}/chiapos/src/b3)
-set(FSE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/chiapos/lib/FiniteStateEntropy/lib)
-
-IF (WIN32)
-set(BLAKE3_SRC
-	${BLAKE3_PATH}/blake3.c
-	${BLAKE3_PATH}/blake3_portable.c
-	${BLAKE3_PATH}/blake3_dispatch.c
-	${BLAKE3_PATH}/blake3_avx2.c
-	${BLAKE3_PATH}/blake3_avx512.c
-	${BLAKE3_PATH}/blake3_sse41.c
-)
-ELSEIF(OSX_NATIVE_ARCHITECTURE STREQUAL "arm64")
-set(BLAKE3_SRC
-	${BLAKE3_PATH}/blake3.c
-	${BLAKE3_PATH}/blake3_portable.c
-	${BLAKE3_PATH}/blake3_dispatch.c
-)
-ELSE()
-set(BLAKE3_SRC
-	${BLAKE3_PATH}/blake3.c
-	${BLAKE3_PATH}/blake3_portable.c
-	${BLAKE3_PATH}/blake3_dispatch.c
-	${BLAKE3_PATH}/blake3_avx2_x86-64_unix.S
-	${BLAKE3_PATH}/blake3_avx512_x86-64_unix.S
-	${BLAKE3_PATH}/blake3_sse41_x86-64_unix.S
-)
-ENDIF()
-
-add_library(mmx_chiapos SHARED
-	src/chiapos/chiapos.cpp
-	chiapos/src/chacha8.c
-	${BLAKE3_SRC}
-	${FSE_PATH}/fse_compress.c
-	${FSE_PATH}/fse_decompress.c
-	${FSE_PATH}/entropy_common.c
-	${FSE_PATH}/hist.c
 )
 
 target_include_directories(mmx_iface
