--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ add_library(mmx_iface SHARED
 	src/ProofOfTime.cpp
 	src/ProofOfSpace.cpp
 	src/secp256k1.cpp
+	src/hash_t.cpp
 	src/contract/PubKey.cpp
 )
 
