--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,11 +54,15 @@ add_library(mmx_iface SHARED
 	src/Transaction.cpp
 	src/Operation.cpp
 	src/Contract.cpp
+	src/Solution.cpp
 	src/ProofOfTime.cpp
 	src/ProofOfSpace.cpp
 	src/secp256k1.cpp
 	src/hash_t.cpp
 	src/contract/PubKey.cpp
+	src/contract/MultiSig.cpp
+	src/solution/PubKey.cpp
+	src/solution/MultiSig.cpp
 )
 
 add_library(mmx_modules SHARED
