--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,8 @@ add_library(mmx_iface SHARED
 	src/hash_t.cpp
 	src/contract/PubKey.cpp
 	src/contract/MultiSig.cpp
+	src/contract/Token.cpp
+	src/contract/Condition.cpp
 	src/solution/PubKey.cpp
 	src/solution/MultiSig.cpp
 )
