--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,6 +60,8 @@ add_library(mmx_iface SHARED
 	src/secp256k1.cpp
 	src/hash_t.cpp
 	src/contract/NFT.cpp
+	src/contract/Data.cpp
+	src/contract/WebData.cpp
 	src/contract/PubKey.cpp
 	src/contract/MultiSig.cpp
 	src/contract/Token.cpp
