--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -125,8 +125,8 @@ add_executable(mmx_wallet src/mmx_wallet.cpp)
 add_executable(mmx_timelord src/mmx_timelord.cpp)
 add_executable(mmx_harvester src/mmx_harvester.cpp)
 
-target_link_libraries(mmx mmx_iface)
-target_link_libraries(mmx_node mmx_modules)
+target_link_libraries(mmx mmx_iface mmx_exchange)
+target_link_libraries(mmx_node mmx_modules mmx_exchange)
 target_link_libraries(mmx_farmer mmx_modules)
 target_link_libraries(mmx_wallet mmx_modules)
 target_link_libraries(mmx_timelord mmx_modules)
