update libbech32 and use new options for not building tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,8 +8,8 @@ set(ARITH "easy" CACHE STRING "BLS ARITH")
 set(BUILD_BLS_PYTHON_BINDINGS OFF CACHE BOOL "BUILD_BLS_PYTHON_BINDINGS")
 set(BUILD_BLS_TESTS OFF CACHE BOOL "BUILD_BLS_TESTS")
 set(BUILD_BLS_BENCHMARKS OFF CACHE BOOL "BUILD_BLS_BENCHMARKS")
-set(LIBBECH32_BUILD_GOOGLETEST OFF CACHE BOOL "LIBBECH32_BUILD_GOOGLETEST")
-set(LIBBECH32_BUILD_RAPIDCHECK OFF CACHE BOOL "LIBBECH32_BUILD_RAPIDCHECK")
+set(LIBBECH32_BUILD_TESTS OFF CACHE BOOL "LIBBECH32_BUILD_TESTS")
+set(LIBBECH32_BUILD_EXAMPLES OFF CACHE BOOL "LIBBECH32_BUILD_EXAMPLES")
 
 add_subdirectory(vnx-base)
 add_subdirectory(vnx-addons)
