using rocksdb to store offers

--- a/exchange/CMakeLists.txt
+++ b/exchange/CMakeLists.txt
@@ -17,6 +17,6 @@ target_include_directories(mmx_exchange
 	PUBLIC include generated/include
 )
 
-target_link_libraries(mmx_exchange mmx_iface)
+target_link_libraries(mmx_exchange mmx_iface vnx_rocksdb)
 
 target_link_libraries(mmx_exch_server mmx_exchange)
