--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,7 @@ add_library(mmx_iface SHARED
 	src/contract/MultiSig.cpp
 	src/contract/Token.cpp
 	src/contract/Staking.cpp
-	src/contract/Condition.cpp
+	src/contract/Locked.cpp
 	src/solution/PubKey.cpp
 	src/solution/MultiSig.cpp
 	src/operation/Mint.cpp
