--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,6 +68,7 @@ add_library(mmx_iface SHARED
 	src/contract/NFT.cpp
 	src/contract/Data.cpp
 	src/contract/DataArray.cpp
+	src/contract/DataObject.cpp
 	src/contract/WebData.cpp
 	src/contract/PubKey.cpp
 	src/contract/MultiSig.cpp
