--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,9 +76,11 @@ add_library(mmx_iface SHARED
 	src/contract/Staking.cpp
 	src/contract/Locked.cpp
 	src/contract/PuzzleLock.cpp
+	src/contract/PlotNFT.cpp
 	src/solution/PubKey.cpp
 	src/solution/MultiSig.cpp
 	src/solution/PuzzleLock.cpp
+	src/solution/PlotNFT.cpp
 	src/operation/Mint.cpp
 	src/operation/Spend.cpp
 	src/operation/Mutate.cpp
