--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -85,6 +85,8 @@ add_library(mmx_iface SHARED
 	src/secp256k1.cpp
 	src/hash_t.cpp
 	src/txio_key_t.cpp
+	src/signature_t.cpp
+	src/bls_signature_t.cpp
 	src/contract/NFT.cpp
 	src/contract/Data.cpp
 	src/contract/DataArray.cpp
