--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,6 +98,7 @@ add_library(mmx_iface SHARED
 	src/contract/PubKey.cpp
 	src/contract/MultiSig.cpp
 	src/contract/Token.cpp
+	src/contract/TokenBase.cpp
 	src/contract/Staking.cpp
 	src/contract/TimeLock.cpp
 	src/contract/PuzzleTimeLock.cpp
