--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,7 +33,7 @@ add_subdirectory(vnx-addons)
 add_subdirectory(vnx-rocksdb)
 add_subdirectory(libbech32)
 add_subdirectory(bls-signatures)
-add_subdirectory(exchange)
+#add_subdirectory(exchange)
 
 find_package(OpenCL)
 find_package(Threads REQUIRED)
@@ -100,7 +100,6 @@ add_library(mmx_iface SHARED
 	src/contract/Offer.cpp
 	src/contract/Token.cpp
 	src/contract/TokenBase.cpp
-	src/contract/Staking.cpp
 	src/contract/TimeLock.cpp
 	src/contract/PuzzleTimeLock.cpp
 	src/contract/MutableRelay.cpp
@@ -114,6 +113,7 @@ add_library(mmx_iface SHARED
 	src/operation/Mint.cpp
 	src/operation/Spend.cpp
 	src/operation/Mutate.cpp
+	src/operation/Deposit.cpp
 	src/operation/Vote.cpp
 )
 
