--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,6 +134,7 @@ add_library(mmx_vm SHARED
 	src/vm/var_t.cpp
 	src/vm/StorageProxy.cpp
 	src/vm/StorageRAM.cpp
+	src/vm/StorageRocksDB.cpp
 )
 
 add_library(mmx_modules SHARED
