--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,6 +162,7 @@ add_library(mmx_modules SHARED
 	src/WebAPI.cpp
 	src/OCL_VDF.cpp
 	src/TimeLordRewards.cpp
+	src/vm_interface.cpp
 )
 
 add_library(uint256_t STATIC
