--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,8 +2,12 @@
 add_executable(test_engine test_engine.cpp)
 add_executable(create_test_contract create_test_contract.cpp)
 
+add_executable(vm_engine_tests vm/engine_tests.cpp)
+
 target_link_libraries(test_engine mmx_vm)
 target_link_libraries(create_test_contract mmx_vm)
+
+target_link_libraries(vm_engine_tests mmx_vm)
 
 if(MSVC)
 	target_include_directories(test_engine PUBLIC ${MMXIFACE_BINARY_DIR})
