--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -108,6 +108,7 @@ add_library(mmx_iface SHARED
 	src/contract/MutableRelay.cpp
 	src/contract/VirtualPlot.cpp
 	src/contract/VoteSheet.cpp
+	src/contract/Binary.cpp
 	src/contract/Executable.cpp
 	src/contract/method_t.cpp
 	src/solution/PubKey.cpp
